change trial period, remove vksdk, /user/friends to GET from POST
