# docs/swagger.json
@@ -567,7 +567,7 @@
             }
         },
         "/users/friends": {
-            "post": {
+            "get": {
                 "description": "\"map friends id to dto list\"",
                 "consumes": [
                     "application/json"
@@ -579,20 +579,6 @@
                     "users"
                 ],
                 "summary": "Friends",
-                "parameters": [
-                    {
-                        "description": "list of user friends",
-                        "name": "friends",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "integer"
-                            }
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
